--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 
 
-    <title>Week 5 Weather App</title>
+    <title>Weather App</title>
   </head>
   <style>
 
