Added & styled Open-source code link

--- a/index.html
+++ b/index.html
@@ -81,8 +81,14 @@
 
 }
 
+.link{
+  font-size: 12px;
+  margin-left: 400px;
+}
+
   </style>
   <body>
+    
     <div class="container card">
       <div class="card-body">
         <div class="row cities">
@@ -169,6 +175,12 @@
 
       </div>
     </div>
+    </div>
+
+    <span class="link">
+      <a href="https://github.com/Allim22/first-weather-app" target="_blank">Open-source code</a>, by Allison Miller</span>
+
+
     <script  src = "src/index.js">
     </script>
   </body>
